<!--
  ~ Created by Pixel Frame on 2017/11/12.
  ~ Copyright (c) 2017. All Rights Reserved.
  ~
  ~ To use contact by e-mail: pm421@live.com.
  -->

<resources>
    <string name="app_name">Yi回收</string>
    <string name="Main_Tab">主页</string>
    <string name="Cart_Tab">购物车</string>
    <string name="Order_Tab">订单</string>
    <string name="Map_Tab">附近</string>
    <string name="Setting_Tab">我的</string>
    <string name="title_activity_map">MapActivity</string>
    <string name="Locate_Error">定位失败，请检查设置</string>
    <string name="username">用户名</string>
    <string name="userinfo">普通用户</string>
    <string name="userlv">Lv 0</string>
    <string name="setting">设置项</string>
    <string name="order_name">品名</string>
    <string name="order_date">时间</string>
    <string name="order_status">状态</string>
    <string name="order_id">#0000000000000</string>
    <string name="password">密码</string>
    <string name="botton_login">登录</string>
    <string name="botton_register">立即注册</string>
    <string name="avatar">头像</string>
    <string name="checkbox_selectall">全选</string>
    <string name="sum_price">价格合计</string>
    <string name="button_settle">结 算</string>
    <string name="price">价格： ￥450.00</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="About">「Yi回收」应用程序\n for Android 4.4+\n\n由东南大学信息科学与工程学院制作\n\n电子邮件：pm421@live.com</string>
    <string name="Compile">版本 1.5 Release\n最后编译于 2017/11/11 21:10</string>
    <string name="button_neworder">新的回收订单</string>
    <string name="button_scan">扫一扫\n打开回收柜</string>
    <string name="Light">闪 光 灯</string>
    <string name="confirm_pwd">确认密码</string>
    <string name="formatuserlv">Lv %1$d</string>
    <string name="button_upload">上传头像</string>
    <string name="button_capture">拍照上传</string>
    <string name="button_confirm">确定</string>
    <string name="itemname">物品名</string>
    <string name="itemprice">回收价</string>
    <string name="itemdesc">物品描述\n物品描述\n物品描述\n物品描述</string>
    <string name="preoreder">预约回收</string>
    <string name="Item_Type">回收品类别</string>
    <string name="Type_0">报纸</string>
    <string name="Type_1">衣物</string>
    <string name="Type_2">电子产品</string>
    <string name="Type_3">金属物品</string>
    <string name="Type_4">家用电器</string>
    <string name="Type_5">其他</string>
    <string name="Num">数量</string>
    <string name="Location">地址</string>
    <string name="Item">物品</string>
    <string name="Accept">接单</string>
    <string name="Accquring">获取中...</string>
    <string name="Edit">修改</string>
    <string name="Cancel">取消订单</string>
</resources>
