<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Created by Pixel Frame on 2017/11/4.
  ~ Copyright (c) 2017. All Rights Reserved.
  ~
  ~ To use contact by e-mail: pm421@live.com.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="cn.edu.seu.srtp.prjyi.yihuishour.PreOrderActivity"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_preord_"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="19dp"
        android:text="@string/Item_Type"
        android:textSize="36sp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioGroup
            android:id="@+id/id_rbgroup_cata"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true">

            <RadioButton
                android:id="@+id/id_rbtn_0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/Type_0" />

            <RadioButton
                android:id="@+id/id_rbtn_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/Type_1" />

            <RadioButton
                android:id="@+id/id_rbtn_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/Type_2" />

            <RadioButton
                android:id="@+id/id_rbtn_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/Type_3" />

            <RadioButton
                android:id="@+id/id_rbtn_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/Type_4" />

            <RadioButton
                android:id="@+id/id_rbtn_5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/Type_5" />

        </RadioGroup>

    </RelativeLayout>

    <TextView
        android:id="@+id/tv_preord_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="51dp"
        android:text="@string/Num"
        android:textSize="36sp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/id_edit_num"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:ems="10"
            android:inputType="number" />

    </RelativeLayout>

    <TextView
        android:id="@+id/tv_preord_3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="51dp"
        android:text="@string/Location"
        android:textSize="36sp" />

    <EditText
        android:id="@+id/id_edit_location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:inputType="text" />

    <Button
        android:id="@+id/id_button_pre_confirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="@color/colorPrimary"
        android:text="@string/button_confirm"
        android:textColor="@color/white" />

</LinearLayout>
