<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Created by Pixel Frame on 2017/11/5.
  ~ Copyright (c) 2017. All Rights Reserved.
  ~
  ~ To use contact by e-mail: pm421@live.com.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="cn.edu.seu.srtp.prjyi.yihuishour.CheckOrderActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/Order_Tab"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/id_tv_co_oid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:layout_weight="1"
        android:text="@string/Accquring"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/Item"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/id_tv_co_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:layout_weight="1"
        android:text="@string/Accquring"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/order_date"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/id_tv_co_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:layout_weight="1"
        android:text="@string/Accquring"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Location"
            android:textSize="30sp" />

        <Button
            android:id="@+id/id_button_co_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Edit" />

    </LinearLayout>

    <TextView
        android:id="@+id/id_tv_co_location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:layout_weight="1"
        android:text="@string/Accquring"
        android:textSize="18sp" />

    <Button
        android:id="@+id/id_button_cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/Cancel"
        android:textSize="30sp" />

</LinearLayout>
