<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Created by Pixel Frame on 2017/7/28.
  ~ Copyright (c) 2017. All Rights Reserved.
  ~
  ~ To use contact by e-mail: pm421@live.com.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="90dp"
    android:orientation="vertical"
    android:padding="10dp"
    android:background="@color/bk_grey">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <TextView
            android:id="@+id/id_tv_order"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/order_name"
            android:layout_alignParentTop="true"
            android:layout_alignStart="@+id/id_tv_orderdate" />

        <TextView
            android:id="@+id/id_tv_orderdate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/order_date"
            android:layout_below="@+id/id_tv_order"
            android:layout_alignStart="@+id/id_tv_orderstatus" />

        <TextView
            android:id="@+id/id_tv_orderstatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/order_status"
            android:layout_below="@+id/id_tv_orderdate"
            android:layout_toEndOf="@+id/id_iv_order"
            android:layout_marginStart="11dp" />

        <TextView
            android:id="@+id/id_tv_orderid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:text="@string/order_id" />

        <ImageView
            android:id="@+id/id_iv_order"
            android:layout_width="70dp"
            android:layout_height="70dp"
            app:srcCompat="@color/white" />

    </RelativeLayout>

</LinearLayout>