<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Created by Pixel Frame on 2017/7/28.
  ~ Copyright (c) 2017. All Rights Reserved.
  ~
  ~ To use contact by e-mail: pm421@live.com.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="1">

    <include layout="@layout/top" />

    <ImageView
        android:id="@+id/id_iv_logo"
        android:layout_width="match_parent"
        android:layout_height="99dp"
        android:layout_marginTop="55dp"
        app:srcCompat="@mipmap/ic_launcher_round" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/id_edit_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/id_tv_username"
            android:ems="10"
            android:inputType="text" />

        <TextView
            android:id="@+id/id_tv_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="43dp"
            android:text="@string/username"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/id_edit_pwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/id_edit_username"
            android:layout_marginTop="39dp"
            android:ems="10"
            android:inputType="textPassword" />

        <TextView
            android:id="@+id/id_tv_pwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/id_tv_username"
            android:layout_below="@+id/id_edit_username"
            android:layout_marginTop="17dp"
            android:text="@string/password"
            android:textSize="20sp" />

        <Button
            android:id="@+id/id_button_login"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/botton_login"
            android:layout_below="@+id/id_edit_pwd"
            android:layout_centerHorizontal="true" />

        <Button
            android:id="@+id/id_button_register"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/botton_register"
            android:layout_below="@+id/id_button_login"
            android:layout_alignParentEnd="true" />

    </RelativeLayout>

</LinearLayout>
