<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Created by Pixel Frame on 2017/9/2.
  ~ Copyright (c) 2017. All Rights Reserved.
  ~
  ~ To use contact by e-mail: pm421@live.com.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="cn.edu.seu.srtp.prjyi.yihuishour.ItemActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/id_button_itcon"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:text="@string/button_confirm"
            android:textColor="@color/white"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true" />

        <ImageView
            android:id="@+id/id_iv_item"
            android:layout_width="220dp"
            android:layout_height="220dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            app:srcCompat="@mipmap/image_loading" />

        <TextView
            android:id="@+id/id_tv_itprice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/id_tv_itname"
            android:layout_below="@+id/id_tv_itname"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="21dp"
            android:text="@string/itemprice"
            android:textSize="36sp" />

        <TextView
            android:id="@+id/id_tv_itname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:text="@string/itemname"
            android:textSize="36sp"
            android:layout_alignParentTop="true"
            android:layout_toEndOf="@+id/id_iv_item"
            android:layout_marginLeft="5dp" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/id_iv_item"
            android:layout_above="@+id/id_button_itcon">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/id_tv_itdesc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:lineSpacingExtra="10sp"
                    android:text="@string/itemdesc"
                    android:textSize="24sp" />
            </LinearLayout>
        </ScrollView>
    </RelativeLayout>

</LinearLayout>
